--- a/client/templates/listings/index.html
+++ b/client/templates/listings/index.html
@@ -2,7 +2,7 @@
   <div class="listings">
     {{> loginButtons}}
     <div class="listings_channels">
-      <h2 class="listings_header">Channels</h2>
+      <h2 class="listings_header">Users</h2>
       <ul class="channel_list">
         <li class="channel active ">
           <a class="channel_name">
@@ -15,6 +15,8 @@
         </li>
       </ul>
     </div>
-    <div class="listings_direct-messages"></div>
+    <div class="listings_direct-messages">
+      {{#each usersList}} {{> userList name=emails}} {{/each}}
+    </div>
   </div>
 </template>
