Change layout and UI

--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -1,12 +1,10 @@
 <template name="HomeLayout">
-    <header>
-       {{> header}}
-      <!-- loginButtons -->
-    </header>
-    <div class="layout">
-      {{> Template.dynamic template=main}}
-    </div>
-    {{> footer}}
-  </template>
-  
-  
+  <header>
+    <!-- {{> header}} -->
+    <!-- loginButtons -->
+  </header>
+  <div class="layout">
+    {{> Template.dynamic template=main}}
+  </div>
+  <!-- {{> footer}} -->
+</template>
