--- a/client/templates/UsersList/index.html
+++ b/client/templates/UsersList/index.html
@@ -1,7 +1,10 @@
 <template name="userList">
   <div class="">
     {{#each name}}
-    <li>{{ address }}</li>
+    <span class="users">
+      <li>{{address}}</li>
+    </span>
+    <!-- <li>{{ address }}</li> -->
     {{/each}}
   </div>
 </template>
