--- a/client/templates/messageContainer/index.html
+++ b/client/templates/messageContainer/index.html
@@ -1,7 +1,8 @@
 <template name="messageContainer">
-    <div class="message-history">
-        {{#each messages}}
-        {{> message text=body}}
-      {{/each}}
-    </div>
+  <div class="messages">
+    <ul>
+      {{#each messages}} {{> message text=body className="replies"}} {{/each}}
+    </ul>
+  </div>
+  <div class="message-history"></div>
 </template>
