--- a/client/templates/room/index.html
+++ b/client/templates/room/index.html
@@ -1,8 +1,12 @@
 <template name="room">
-  <div class="main">
-       {{> listings}}
-       {{> messageContainer}}
+  <li class="contact">
+    <div class="wrap">
+      <span class="contact-status online"></span>
+      <img src="http://emilcarlsson.se/assets/louislitt.png" alt="" />
+      <div class="meta">
+        <p class="name">{{title}}</p>
+        <p class="preview">You just got LITT up, Mike.</p>
+      </div>
     </div>
+  </li>
 </template>
-    
-
