--- a/client/templates/UsersList/index.html
+++ b/client/templates/UsersList/index.html
@@ -1,9 +1,7 @@
 <template name="userList">
   <div class="">
     <span class="users" id="username">
-      {{#each email in user.emails}}
-      <li>{{user.emails}}</li>
-      {{/each}}
+      <li>{{emails}}</li>
     </span>
     <!-- <li>{{ address }}</li> -->
   </div>
