--- a/client/templates/room/index.html
+++ b/client/templates/room/index.html
@@ -1,6 +1,6 @@
 <template name="room">
   <li class="contact">
-    <div class="wrap">
+    <div class="wrap" id="room-display">
       <span class="contact-status online"></span>
       <img src="http://emilcarlsson.se/assets/louislitt.png" alt="" />
       <div class="meta">
