--- a/client/templates/footer/index.html
+++ b/client/templates/footer/index.html
@@ -1,7 +1,11 @@
 <template name="footer">
   <div class="message-input">
     <div class="wrap">
-      <input type="text" placeholder="Write your message..." />
+      <input
+        type="text"
+        placeholder="Write your message..."
+        id="input-box_text"
+      />
       <i class="fa fa-paperclip attachment" aria-hidden="true"></i>
       <button class="submit">
         <i class="fa fa-paper-plane" aria-hidden="true"></i>
