--- a/client/templates/message/index.html
+++ b/client/templates/message/index.html
@@ -1,6 +1,6 @@
 <template name="message">
   <!-- prettier-ignore -->
-  <li class={{className}}> <!-- class= sent or replies-->
+  <li class={{dynamicClass}}> <!-- class= sent or replies-->
     <img src="" alt="" />
     <p>
       {{text}}
