--- a/client/templates/messageContainer/index.html
+++ b/client/templates/messageContainer/index.html
@@ -1,7 +1,8 @@
 <template name="messageContainer">
   <div class="messages">
     <ul>
-      {{#each messages}} {{> message text=body className="replies"}} {{/each}}
+      {{#each messages}} {{> message text=body className="replies"
+      createdBy=createdBy}} {{/each}}
     </ul>
   </div>
   <div class="message-history"></div>
